fix the extra white space on the right side

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -212,7 +212,7 @@ p {
     background-color: #00243E;
     .top-bar {
       height: 60px;
-      width: 1170px;
+      max-width: 1170px;
       padding: 0 15px 0 0;
       margin: 0 auto 0 auto;
       .top-bar-header {
@@ -226,9 +226,9 @@ p {
   .login-body {
     padding: 112px 15px 0 0;
     .content-container {
+      max-width: 1170px;
       margin: 0 auto 0 auto;
       //padding: 0 15px 0 15px;
-      width: 1170px;
       .content-container-left {
         font-family: 'Raleway', sans-serif;
         .upper-left {
